--- a/Curse.html
+++ b/Curse.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hello world ki</p>
-    <script src="js/script.js"></script>
+    <script src="js/script_practica.js"></script>
 </body>
 </html>
