--- a/Curse.html
+++ b/Curse.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world ki</p>
+<div id = box class = 'button large' ><button>button</button></div>
+<div id = box2 class = 'button large2' ><button>button2</button></div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
