--- a/Curse.html
+++ b/Curse.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id = box class = 'button large' ><button>button</button></div>
-<div id = box2 class = 'button large2' ><button>button2</button></div>
+<div id = box2 class = 'button large2' ><button class = 'button3'>button2</button></div>
 
     <script src="js/script.js"></script>
 </body>
