--- a/js/Curse.html
+++ b/js/Curse.html
@@ -9,6 +9,6 @@
 <div id = box class = 'button large' ><button>button</button></div>
 <div id = box2 class = 'button large2' ><button class = 'button3'>button2</button></div>
 <a href="https://www.youtube.com/">https://www.youtube.com/</a>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
